# OXYGEN-SDK

./: .buildinfo  .gitignore  CHANGELOG.md  CMakeLists.txt  Error in the code while adding new property #43  LICENSE  Ld plugin cpp code #41  OxygenPluginWizard.vsix  README.md  about.html  build_instructions.html  channel_configuration.html  examples.html  export_plugin.html  genindex.html  index.html  objects.inv  plugin_qml.html  property_list.html  search.html  searchindex.js  setup.py  software_channel_plugin.html  templates.html  translation.html  ui_extensions.html
docs/: CMakeLists.txt  Doxyfile.in  Makefile  Readme.txt  about.rst  build_instructions.rst  channel_configuration.rst  conf.py  examples.rst  export_plugin.rst  index.rst  make.bat  plugin_qml.rst  property_list.rst  setup.sh  software_channel_plugin.rst  templates.rst  translation.rst  ui_extensions.rst
docs/00_InformationRights/: InformationRights.rst
docs/01_Quickstart/: Quickstart.rst
docs/01_SDKIntroduction/: SDKIntroduction.rst
docs/02_Quickstart/: Quickstart.rst
docs/02_SDKOverview/: SDKOverview.rst
docs/03_SoftwareChannelPlugin/: SoftwareChannelPlugin.rst
docs/04_ExportPlugin/: ExportPlugin.rst
docs/10_ChannelConfiguration/: ChannelConfiguration.rst
docs/11_Translation/: Translation.rst
docs/12_UIExtensions/: UIExtensions.rst
docs/13_PluginQML/: PluginQML.rst
docs/20_DebuggingLogging/: DebuggingLogging.rst
docs/30_Examples/: Examples.rst
docs/40_Templates/: Templates.rst
docs/50_FAQ/: FAQ.rst
docs/_static/: Cover_de.docx  dewetron_style.tex.txt
docs/_static/stylesheets/: css  jquery-ui.css  oxygen_material.css  style-50540e17ea.css
docs/_templates/: layout.html
examples/: CMakeLists.txt  odk_examples.sln  odk_examples.vcxproj
examples/bin_detector/: CMakeLists.txt  README.rst  bin_detector.vcxproj  odkex_bin_detector.cpp
examples/empty_export/: CMakeLists.txt  README.rst  odkex_empty_export.cpp
examples/empty_software_channel/: CMakeLists.txt  README.rst  odkex_empty_software_channel.cpp
examples/property_callback/: CMakeLists.txt  README.rst  property_callback.vcxproj
examples/property_callback/src/: odkex_property_callback_example_plugin.cpp
examples/replay_message/: CMakeLists.txt  README.rst  odkex_replay_message.cpp  replay_message.vcxproj
examples/replay_message/unit_tests/: CMakeLists.txt  csv_utils_test.cpp  test_module.cpp
examples/replay_single_matrix/: CMakeLists.txt  README.rst  odkex_replay_single_matrix.cpp  replay_single_matrix.vcxproj
examples/replay_sync_scalar/: AddChannel.qml  CMakeLists.txt  README.rst  odkex_replay_sync_scalar.cpp  qml.qrc  replay_sync_scalar.vcxproj
examples/sample_interpolator/: CMakeLists.txt  README.rst  odkex_sample_interpolator.cpp  sample_interpolator.vcxproj
examples/shared/: sdk_csv_utils.cpp  sdk_csv_utils.h
examples/simple_moving_average/: CMakeLists.txt  README.rst  odkex_simple_moving_average.cpp  simple_moving_average.vcxproj
examples/sum_channels/: CMakeLists.txt  README.rst  odkex_sum_channels.cpp  sum_channels.vcxproj
examples/sync_resample_source/: CMakeLists.txt  README.rst  odkex_sync_resample_source.cpp  sync_resample_source.vcxproj
examples/video_source/: CMakeLists.txt  README.rst  odkex_dewetron_spinner.cpp  odkex_spiral.cpp  odkex_video_source.cpp
examples/wav_export/: CMakeLists.txt  ExportSettings.qml  README.rst  odkex_wav_export.cpp  qml.qrc  wav_export.vcxproj
examples/wav_export/inc/: wav_writer.h
examples/wav_export/src/: wav_writer.cpp
examples/wav_export/trans/: odkex_wav_export_en.ts
examples/wav_export/unit_tests/: CMakeLists.txt  test_module.cpp  wav_writer_test.cpp
odk/api/: CMakeLists.txt  api.vcxproj
odk/api/inc/: odkapi_acquisition_task_xml.h  odkapi_block_descriptor_xml.h  odkapi_block_descriptor_xml_fwd.h  odkapi_channel_config_changed_xml.h  odkapi_channel_dataformat_xml.h  odkapi_channel_list_xml.h  odkapi_channel_mapping_xml.h  odkapi_config_item_keys.h  odkapi_data_set_descriptor.h  odkapi_data_set_descriptor_xml.h  odkapi_data_set_descriptor_xml_fwd.h  odkapi_data_set_xml.h  odkapi_error_codes.h  odkapi_event_ids.h  odkapi_export_xml.h  odkapi_logging.h  odkapi_marker_xml.h  odkapi_measurement_header_data_xml.h  odkapi_message_ids.h  odkapi_message_ids.inc  odkapi_node_list_xml.h  odkapi_oxygen_queries.h  odkapi_property_list_xml.h  odkapi_property_xml.h  odkapi_pugixml_fwd.h  odkapi_software_channel_xml.h  odkapi_timebase_xml.h  odkapi_timestamp_xml.h  odkapi_types.h  odkapi_update_channels_xml.h  odkapi_update_config_xml.h  odkapi_utils.h  odkapi_version_xml.h  odkapi_video.h  odkapi_xml_builder.h
odk/api/src/: assert_bimap_size.h  odkapi_acquisition_task_xml.cpp  odkapi_block_descriptor_xml.cpp  odkapi_channel_config_changed_xml.cpp  odkapi_channel_dataformat_xml.cpp  odkapi_channel_list_xml.cpp  odkapi_channel_mapping_xml.cpp  odkapi_data_set_descriptor.cpp  odkapi_data_set_descriptor_xml.cpp  odkapi_data_set_xml.cpp  odkapi_export_xml.cpp  odkapi_marker_xml.cpp  odkapi_measurement_header_data_xml.cpp  odkapi_property_list_xml.cpp  odkapi_property_xml.cpp  odkapi_software_channel_xml.cpp  odkapi_timebase_xml.cpp  odkapi_timestamp_xml.cpp  odkapi_types.cpp  odkapi_update_channels_xml.cpp  odkapi_update_config_xml.cpp  odkapi_utils.cpp  odkapi_version_xml.cpp  odkapi_xml_builder.cpp
odk/api/unit_tests/: CMakeLists.txt  odkapi_acquisition_task_test.cpp  odkapi_block_descriptor_test.cpp  odkapi_data_set_descriptor_test.cpp  odkapi_data_set_test.cpp  odkapi_export_properties_test.cpp  odkapi_property_test.cpp  odkapi_start_telegram_test.cpp  odkapi_stream_descriptor_test.cpp  odkapi_timestamp_test.cpp  odkapi_update_channels_test.cpp  odkapi_update_config_test.cpp  odkapi_utils_test.cpp  odkapi_version_test.cpp  (+3 more)
odk/base/: CMakeLists.txt  base.vcxproj  odkbase_api_object_ptr.h  odkbase_basic_values.h  odkbase_if_api_object.h  odkbase_if_host.h  odkbase_if_host_fwd.h  odkbase_if_plugin.h  odkbase_if_value.h  odkbase_message_return_value_holder.h
odk/framework/: CMakeLists.txt  framework.vcxproj
odk/uni/: CMakeLists.txt  uni.vcxproj
(+110 files in other folders)
