#
# Oxygen plugin SDK examples
#

add_subdirectory("bin_detector")
add_subdirectory("property_callback")
add_subdirectory("replay_message")
add_subdirectory("replay_sync_scalar")
add_subdirectory("replay_single_matrix")
add_subdirectory("sample_interpolator")
add_subdirectory("simple_moving_average")
add_subdirectory("sum_channels")
add_subdirectory("sync_resample_source")
add_subdirectory("video_source")
add_subdirectory("wav_export")
